--- a/client/src/styles/GameLobbyPage.css
+++ b/client/src/styles/GameLobbyPage.css
@@ -69,5 +69,5 @@
 
 .player-grid {
   display: grid;
-  grid-template-columns: repeat( auto-fill, minmax(30%, 1fr) );
+  grid-template-columns: repeat( auto-fill, minmax(140px, 1fr) );
 }
